[gd_scene load_steps=11 format=3 uid="uid://b18iwfskgx8ub"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7p7au"]
[ext_resource type="Texture2D" uid="uid://de1kxtlli6y8m" path="res://assets/sprites/character_128x128.png" id="2_wmj6r"]
[ext_resource type="Script" path="res://scripts/health_bar.gd" id="5_msrjk"]
[ext_resource type="Texture2D" uid="uid://ciysmvqbxow4l" path="res://assets/ui/player_heart_full.png" id="5_p5u3n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7sucb"]
radius = 64.0312

[sub_resource type="AtlasTexture" id="AtlasTexture_7cmiv"]
atlas = ExtResource("2_wmj6r")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m1e8"]
atlas = ExtResource("2_wmj6r")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2yfl"]
atlas = ExtResource("2_wmj6r")
region = Rect2(128, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ec7au"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cmiv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m1e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2yfl")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ms7m1"]
size = Vector2(18, 57)

[node name="Player" type="CharacterBody2D"]
z_index = 100
collision_layer = 513
script = ExtResource("1_7p7au")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7sucb")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_ec7au")
animation = &"idle"

[node name="RotationNode" type="Node2D" parent="."]

[node name="HandleArea" type="Area2D" parent="RotationNode"]
position = Vector2(80, 0)
collision_layer = 512
collision_mask = 528

[node name="CollisionShape2D" type="CollisionShape2D" parent="RotationNode/HandleArea"]
shape = SubResource("RectangleShape2D_ms7m1")

[node name="Indicator" type="ColorRect" parent="."]
visible = false
offset_left = 13.0
offset_top = 14.0
offset_right = 53.0
offset_bottom = 54.0
color = Color(1, 0, 0, 1)

[node name="CarryLocation" type="Node2D" parent="."]
position = Vector2(32, -32)

[node name="health_bar" type="HBoxContainer" parent="."]
offset_left = -80.0
offset_top = -150.0
offset_right = 314.0
offset_bottom = -22.0
scale = Vector2(0.4, 0.4)
theme_override_constants/separation = 5
script = ExtResource("5_msrjk")

[node name="heart_1" type="TextureRect" parent="health_bar"]
layout_mode = 2
texture = ExtResource("5_p5u3n")

[node name="heart_2" type="TextureRect" parent="health_bar"]
layout_mode = 2
texture = ExtResource("5_p5u3n")
stretch_mode = 2

[node name="heart_3" type="TextureRect" parent="health_bar"]
layout_mode = 2
texture = ExtResource("5_p5u3n")
stretch_mode = 2

[connection signal="body_entered" from="RotationNode/HandleArea" to="." method="_on_handle_area_body_entered"]
[connection signal="body_exited" from="RotationNode/HandleArea" to="." method="_on_handle_area_body_exited"]
